--- a/index.html
+++ b/index.html
@@ -1,67 +1,73 @@
- 
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AIC</title>
-    <link
-    rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-    crossorigin="anonymous"
-  />
-    <link rel="stylesheet" href="./styles.css" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="/logo.png" />
+  <title>AIC</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+  <link rel="stylesheet" href="./styles.css" />
 </head>
+
 <body>
-    <img src="./logo.png" id="logo">
-
-    <header class="header">
-        <img src="./header.png" id="picheader">
-        <a id="textinfrontofimage">Institue of Chicago</a> 
-    </header>
-    
-    <div class="container">
-        <div class="row">
-            <div class="col-12">
-              <form id="search-form">
-                <div class="input-group input-group-lg">
-                  <input
-                    class="form-control search-bar"
-                    placeholder="What calls to you..."
-                  />
-                  <button class="btn btn-primary input-group-btn" type="submit">
-                    Search
-                  </button>
-                </div>
-              </form>
-            </div>
-          </div>
-    </div>
-        
   <div>
-    <div id="imageContainer"></div>
-</div>
 
-<div class="pagination">
-    <a id="decrement" href="#">&laquo;</a>
-    <a class="active pageNumber" href="#" id="1" >1</a>
-    <a class="pageNumber" href="#" id="2">2</a>
-    <a class="pageNumber" href="#" id="3">3</a>
-    <a class="pageNumber" href="#" id="4">4</a>
-    <a class="pageNumber" href="#" id="5">5</a>
-    <a class="pageNumber" href="#" id="6">6</a>
-    <a id="increment" href="#">&raquo;</a>
+
+
+    <div class="topPage">
+      <img src="./logo.png" id="logo"> <img src="./aic.png" class="picheader">
+    </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <form id="search-form">
+            <div class="input-group input-group-lg">
+              <input id="searchbar" class="form-control search-bar"
+                placeholder="Art is a line around your thoughts..." />
+              <button id="searchbutton" class="btn btn-primary input-group-btn" type="submit">
+                Search
+              </button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+
+    <div>
+      <div id="imageContainer"></div>
+    </div>
+
+    <div class="pagination" id="scrollToTop">
+      <a id="decrement">&laquo;</a>
+      <a class="active pageNumber" id="1">1</a>
+      <a class="pageNumber" id="2">2</a>
+      <a class="pageNumber" id="3">3</a>
+      <a class="pageNumber" id="4">4</a>
+      <a class="pageNumber" id="5">5</a>
+      <a class="pageNumber" id="6">6</a>
+      <a id="increment">&raquo;</a>
+
+    </div>
+
+
+
+
   </div>
 
-    <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+  <div class="footerCopyright">
+    <footer class="copyright">&copy; Copyright 2023 Kristina Song</footer>
+  </div>
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"
-  ></script>
-    <script src="./script.js"></script>
+    crossorigin="anonymous"></script>
+  <script src="./script.js"></script>
 </body>
+
 
 </html>
