--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
 
 
-    <div class="topPage">
+    <a href="#" class="topPage">
       <img src="./logo.png" id="logo"> <img src="./aic.png" class="picheader">
-    </div>
+    </a>
 
     <div class="container">
       <div class="row">
